--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -134,25 +134,28 @@ steps:
       - |
         #!/bin/bash
         team_namespace=$(cat /workspace/team_namespace.txt)
+        
+        if gcloud secrets describe "$team_namespace" --project="$_OPS_PROJECT_ID" &> /dev/null; then
+            secret_value=$(gcloud secrets versions access latest --secret="$team_namespace" --project="$_OPS_PROJECT_ID")
+            #echo $pass_gen > /workspace/teamsecret.txt
+        else
+            # Secret does not exist, create a new secret for the team
+            gcloud secrets create "$team_namespace" --project="$_OPS_PROJECT_ID"
+            pass_gen="$(openssl rand -hex 16)"
+            pass_gen_prep="($pass_gen)-nowimpassword:)"
+            pass_gen_base64=$(echo $pass_gen_prep | base64)
+            pass_final="(${pass_gen_base64})-imnotpasswordyet:(ps.onemore"
 
-        # Create a secret for the team
-        gcloud secrets create "$team_namespace" --project="$_OPS_PROJECT_ID"
-
-        pass_gen="$(openssl rand -hex 16)"
-        pass_gen_prep="($pass_gen)-nowimpassword:)"
-        pass_gen_base64=$(echo $pass_gen_prep | base64)
-        pass_final="(${pass_gen_base64})-imnotpasswordyet:(ps.onemore"
-
-        #save for container
-        echo $pass_gen > /workspace/teamsecret.txt
-        echo "Generated password: $pass_gen"
-        echo "Generated password: $pass_gen"
-        echo "prepared password: $pass_gen_prep"
-        echo "base64 password: $pass_gen_base64"
-        echo "Updated password: $pass_final"
-
-        echo -n "$pass_final" | gcloud secrets versions add "$team_namespace" --data-file=- --project="$_OPS_PROJECT_ID"
-  
+            #save for container
+            echo $pass_gen > /workspace/teamsecret.txt
+            echo "Generated password: $pass_gen"
+            echo "Generated password: $pass_gen"
+            echo "prepared password: $pass_gen_prep"
+            echo "base64 password: $pass_gen_base64"
+            echo "Updated password: $pass_final"
+            echo -n "$pass_final" | gcloud secrets versions add "$team_namespace" --data-file=- --project="$_OPS_PROJECT_ID"  
+        fi
+        
   # iam role assesor
   - id: "Secret iam assesor"
     name: "gcr.io/cloud-builders/gcloud"
