--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -137,7 +137,7 @@ steps:
         
         if gcloud secrets describe "$team_namespace" --project="$_OPS_PROJECT_ID" &> /dev/null; then
             secret_value=$(gcloud secrets versions access latest --secret="$team_namespace" --project="$_OPS_PROJECT_ID")
-            #echo $pass_gen > /workspace/teamsecret.txt
+            #echo $secret_value > /workspace/teamsecret.txt
         else
             # Secret does not exist, create a new secret for the team
             gcloud secrets create "$team_namespace" --project="$_OPS_PROJECT_ID"
