--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -180,15 +180,16 @@ steps:
         service_account_name=$(cat /workspace/teamsa.txt)
         pass_gen=$(cat /workspace/teamsecret.txt)
         teamname=$(cat /workspace/teamname.txt)
+        team_namespace=$(cat /workspace/team_namespace.txt)
         echo "#################"
         ls -la app_db
         cat app_db/Dockerfile
         sed -i '' -e "s/ENV MYSQL_ROOT_PASSWORD=tmppassword/ENV MYSQL_ROOT_PASSWORD=${pass_gen}/g" app_db/Dockerfile
         cat app_db/Dockerfile
         echo "#################"
-        docker buildx build --platform linux/amd64 -t gubgubdb:$teamname app_db
-        docker tag gubgubdb:$teamname europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$teamname
-        docker push europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$teamname
+        docker buildx build --platform linux/amd64 -t gubgubdb:$team_namespace app_db
+        docker tag gubgubdb:$team_namespace europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
+        docker push europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
   
   # deploy services manifest
   - id: "GKE - Deploy db-svc "
@@ -217,7 +218,36 @@ steps:
               targetPort: 3306
         EOF
 
-  # deploy services manifest
+  # # deploy services manifest
+  # - id: "GKE - Deploy db"
+  #   name: "gcr.io/cloud-builders/gcloud"
+  #   entrypoint: "bash"
+  #   args:
+  #     - -x
+  #     - -c
+  #     - |
+  #       #!/bin/bash
+  #       teamname=$(cat /workspace/teamname.txt)
+  #       team_namespace=$(cat /workspace/team_namespace.txt)
+        
+  #       #db-pod
+  #       cat <<EOF | kubectl apply -f -
+  #       apiVersion: v1
+  #       kind: Pod
+  #       metadata:
+  #         labels:
+  #           app: db
+  #         name: gubgub-db
+  #         namespace: $team_namespace
+  #       spec:
+  #         restartPolicy: Always
+  #         containers:
+  #         - name: db
+  #           image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
+  #           ports:
+  #           - containerPort: 3306
+  #       EOF
+  # deploy services manifest ##########################
   - id: "GKE - Deploy db"
     name: "gcr.io/cloud-builders/gcloud"
     entrypoint: "bash"
@@ -226,27 +256,32 @@ steps:
       - -c
       - |
         #!/bin/bash
-        teamname=$(cat /workspace/teamname.txt)
         team_namespace=$(cat /workspace/team_namespace.txt)
         
-        #db-pod
+        #app-deployment
         cat <<EOF | kubectl apply -f -
-        apiVersion: v1
-        kind: Pod
+        apiVersion: apps/v1
+        kind: Deployment
         metadata:
-          labels:
-            app: db
           name: gubgub-db
           namespace: $team_namespace
         spec:
-          restartPolicy: Always
-          containers:
-          - name: db
-            image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$teamname
-            ports:
-            - containerPort: 3306
+          replicas: 1
+          selector:
+            matchLabels:
+              app: db
+          template:
+            metadata:
+              labels:
+                app: db
+            spec:
+              containers:
+              - name: db
+                image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
+                ports:
+                - containerPort: 3306
         EOF
-  # deploy services manifest
+  #deploy app
   - id: "GKE - Deploy app"
     name: "gcr.io/cloud-builders/gcloud"
     entrypoint: "bash"
