deployment db with prebuilded pass

--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -219,40 +219,7 @@ steps:
               targetPort: 3306
         EOF
 
-  # deploy services manifest
-  - id: "GKE - Deploy db"
-    name: "gcr.io/cloud-builders/gcloud"
-    entrypoint: "bash"
-    args:
-      - -x
-      - -c
-      - |
-        #!/bin/bash
-        teamname=$(cat /workspace/teamname.txt)
-        team_namespace=$(cat /workspace/team_namespace.txt)
-        pass_gen=$(cat /workspace/teamsecret.txt)
-        
-        #db-pod
-        cat <<EOF | kubectl apply -f -
-        apiVersion: v1
-        kind: Pod
-        metadata:
-          labels:
-            app: db
-          name: gubgub-db
-          namespace: $team_namespace
-        spec:
-          restartPolicy: Always
-          containers:
-          - name: db
-            image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
-            ports:
-            - containerPort: 3306
-            env:
-              - name: MYSQL_ROOT_PASSWORD
-                value: $pass_gen
-        EOF
-  # deploy services manifest ##########################
+  # # deploy services manifest
   # - id: "GKE - Deploy db"
   #   name: "gcr.io/cloud-builders/gcloud"
   #   entrypoint: "bash"
@@ -261,31 +228,64 @@ steps:
   #     - -c
   #     - |
   #       #!/bin/bash
+  #       teamname=$(cat /workspace/teamname.txt)
   #       team_namespace=$(cat /workspace/team_namespace.txt)
+  #       pass_gen=$(cat /workspace/teamsecret.txt)
         
-  #       #app-deployment
+  #       #db-pod
   #       cat <<EOF | kubectl apply -f -
-  #       apiVersion: apps/v1
-  #       kind: Deployment
+  #       apiVersion: v1
+  #       kind: Pod
   #       metadata:
+  #         labels:
+  #           app: db
   #         name: gubgub-db
   #         namespace: $team_namespace
   #       spec:
-  #         replicas: 1
-  #         selector:
-  #           matchLabels:
-  #             app: db
-  #         template:
-  #           metadata:
-  #             labels:
-  #               app: db
-  #           spec:
-  #             containers:
-  #             - name: db
-  #               image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
-  #               ports:
-  #               - containerPort: 3306
+  #         restartPolicy: Always
+  #         containers:
+  #         - name: db
+  #           image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
+  #           ports:
+  #           - containerPort: 3306
+  #           env:
+  #             - name: MYSQL_ROOT_PASSWORD
+  #               value: $pass_gen
   #       EOF
+  # deploy services manifest ##########################
+  - id: "GKE - Deploy db"
+    name: "gcr.io/cloud-builders/gcloud"
+    entrypoint: "bash"
+    args:
+      - -x
+      - -c
+      - |
+        #!/bin/bash
+        team_namespace=$(cat /workspace/team_namespace.txt)
+        
+        #app-deployment
+        cat <<EOF | kubectl apply -f -
+        apiVersion: apps/v1
+        kind: Deployment
+        metadata:
+          name: gubgub-db
+          namespace: $team_namespace
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app: db
+          template:
+            metadata:
+              labels:
+                app: db
+            spec:
+              containers:
+              - name: db
+                image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
+                ports:
+                - containerPort: 3306
+        EOF
   #deploy app
   - id: "GKE - Deploy app"
     name: "gcr.io/cloud-builders/gcloud"
