--- a/cloudbuild/cloudbuild.yaml
+++ b/cloudbuild/cloudbuild.yaml
@@ -220,40 +220,6 @@ steps:
               targetPort: 3306
         EOF
 
-  # # deploy services manifest
-  # - id: "GKE - Deploy db"
-  #   name: "gcr.io/cloud-builders/gcloud"
-  #   entrypoint: "bash"
-  #   args:
-  #     - -x
-  #     - -c
-  #     - |
-  #       #!/bin/bash
-  #       teamname=$(cat /workspace/teamname.txt)
-  #       team_namespace=$(cat /workspace/team_namespace.txt)
-  #       pass_gen=$(cat /workspace/teamsecret.txt)
-        
-  #       #db-pod
-  #       cat <<EOF | kubectl apply -f -
-  #       apiVersion: v1
-  #       kind: Pod
-  #       metadata:
-  #         labels:
-  #           app: db
-  #         name: gubgub-db
-  #         namespace: $team_namespace
-  #       spec:
-  #         restartPolicy: Always
-  #         containers:
-  #         - name: db
-  #           image: europe-west1-docker.pkg.dev/abel-ghack-infra/ghack-docker-repo/gubgubdb:$team_namespace
-  #           ports:
-  #           - containerPort: 3306
-  #           env:
-  #             - name: MYSQL_ROOT_PASSWORD
-  #               value: $pass_gen
-  #       EOF
-  # deploy services manifest ##########################
   - id: "GKE - Deploy db"
     name: "gcr.io/cloud-builders/gcloud"
     entrypoint: "bash"
@@ -297,7 +263,8 @@ steps:
       - |
         #!/bin/bash
         team_namespace=$(cat /workspace/team_namespace.txt)
-        
+        pass_gen=$(cat /workspace/teamsecret.txt)
+
         #app-deployment
         cat <<EOF | kubectl apply -f -
         apiVersion: apps/v1
@@ -322,7 +289,7 @@ steps:
                 - containerPort: 5000
                 env:
                 - name: MYSQL_PASSWORD
-                  value: IHateThisGame
+                  value: $pass_gen
         EOF
   # deploy service loadbalancer
   - id: "GKE - Deploy svc-lb"
